// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRLF.php - php-verify: CRLF.php 1`] = `
<?php
$test = 1;

class Foo
{
    /**
     * Comment indented with tabs in file with utf-8[dos]
     */
    private $foo;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

class Foo
{
    /**
     * Comment indented with tabs in file with utf-8[dos]
     */
    private $foo;
}

`;

exports[`LF.php - php-verify: LF.php 1`] = `
<?php
$test = 1;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`file-terminated-with-multiple-LF.php - php-verify: file-terminated-with-multiple-LF.php 1`] = `
<?php
$test = 1;


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`file-terminated-without-line-ending.php - php-verify: file-terminated-without-line-ending.php 1`] = `
<?php
$test = 1;~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`html-CRLF.php - php-verify: html-CRLF.php 1`] = `
<!DOCTYPE html>
<html lang="de">
    <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
        <title>.</title>
    </head>
    <body>

        <?php echo 'foo!'; ?>

    </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html lang="de">
    <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
        <title>.</title>
    </head>
    <body>

        <?php echo 'foo!'; ?>

    </body>
</html>

`;

exports[`html-LF.php - php-verify: html-LF.php 1`] = `
<!DOCTYPE html>
<html lang="de">
    <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
        <title>.</title>
    </head>
    <body>

        <?php echo 'foo!'; ?>

    </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html lang="de">
    <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
        <title>.</title>
    </head>
    <body>

        <?php echo 'foo!'; ?>

    </body>
</html>

`;
